Changed fan title

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Significa",
-  "name": "Significa",
+  "short_name": "William",
+  "name": "William - AI/ML Engineer",
   "icons": [
     {
       "src": "favicon.ico",
