--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://wdmdev.github.io/my-gh-pages",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
