New page look in the making

--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wdmdev.github.io/my-gh-pages",
+  "homepage": "https://wdmdev.github.io/william-marstrand",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "predeploy": "next build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
