--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "@heroicons/react": "^2.0.13",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0"
   },
   "devDependencies": {
     "@types/node": "18.8.5",
