--- a/.github/workflows/buildjs.yml
+++ b/.github/workflows/buildjs.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-      - name: Use Node.js 16.x
+      - name: Use Node.js 21.6.0
         uses: actions/setup-node@v1
         with:
-          node-version: '16.x'
+          node-version: '21.6.0'
 
       - name: Installing my packages
         run: npm ci
